@@ -12,14 +12,13 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-function Setup
+function Start-Test
 {
-    Import-Module (Join-Path $TestDir ..\..\Carbon)
+    & (Join-Path -Path $PSScriptRoot -ChildPath '..\..\Carbon\Import-Carbon.ps1' -Resolve)
 }
 
-function TearDown
+function Stop-Test
 {
-    Remove-Module Carbon
 }
 
 function Test-ShouldCheckIfLocalAccountExists
